@@ -1,3 +1,8 @@
+2011-08-03  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
+
+	* testsuite/run-dlvhex-tests.sh (TESTDIR): Assume that TESTDIR and
+	EXAMPLESDIR are given.
+
 2011-07-13  Peter Schueller  <ps@kr.tuwien.ac.at>
 
 	* testsuite/answerset_compare.py: Added common answer set comparison
